--- a/docs/index.css
+++ b/docs/index.css
@@ -42,10 +42,13 @@ a {
   display: block;
 }
 
+.text-right {
+  text-align:right;
+}
+
 .img-box>img {
   width: 100%;
   display: block;
-  border: 1px solid black;
 }
 
 .con {
@@ -69,11 +72,11 @@ a {
 }
 
 .top-bar>.con>div:nth-child(2) {
-  width: calc(100% - 245px - 588.5px);
+  width: calc(100% - 245px - 590px);
 }
 
 .top-bar>.con>div:last-child {
-  width: 588.5px;
+  width: 590px;
 }
 
 .top-bar__logo {
@@ -111,6 +114,77 @@ a {
   display: block;
 }
 
+/* section-0 */
+.section-0 {
+  margin-top: 20px;
+}
+
+/* work-list-box */
+
+.work-list-box>ul {
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
 .work-list-box>ul>li {
   width: calc(100% / 3);
+  padding: 0 10px;
+  margin-top: 20px;
+}
+
+.work-list-box>ul>li>div>.work-name {
+  padding-top: 10px;
+  text-align: center;
+}
+
+
+.work-list-box>ul>li>div>.work-date-period {
+  padding-top: 5px;
+  text-align: center;
+}
+
+.work-list-box>ul>li>div>.img-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-list-box>ul>li>div>.img-box>.bg {
+  background-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  transition: background-color 1s;
+}
+
+.work-list-box>ul>li:hover>div>.img-box>.bg {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.work-list-box>ul>li>div>.img-box>img {
+  transition: transform 1s;
+  z-index: -1;
+  position: relative;
+}
+
+.work-list-box>ul>li:hover>div>.img-box>img {
+  transform: scale(1.4);
+}
+
+.work-list-box>ul>li>div>.img-box>.text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  color: white;
+  border: 3px solid white;
+  padding: 13px;
+  border-radius: 15px;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.work-list-box>ul>li:hover>div>.img-box>.text {
+  opacity: 1;
 }
